--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ deploy:
   region: "us-east-1"
   name: "docker-react"
   env: "DockerReact-env"
-  bucker_name: "elasticbeanstalk-us-east-1-951598467679"
+  bucket_name: "elasticbeanstalk-us-east-1-951598467679"
   bucket_path: "docker-react"
   on: 
     branch: master
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key:
-    secure: "$AWS_SECRET_KEY"
+    secure: "$AWS_SECRET_KEY"fixed 
